# alpaca-backtrader-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
alpaca_backtrader_api/: __init__.py  alpacabroker.py  alpacadata.py  alpacastore.py
requirements/: requirements.txt
sample/: strategy_multiple_datas.py  strategy_multiple_indicators.py  strategy_readme_sample.py  strategy_resampling_example.py  strategy_sample_code.py  strategy_sma_crossover.py
