[tool.poetry]
name = "alpaca-backtrader-api"
version = "0.1.0"
description = ""
authors = ["Riley <rileymshea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alpaca-trade-api = "^0.51.0"
trading-calendars = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
requests-mock = "^1.8.0"
flake8 = "^3.8.4"
mock = "^4.0.2"
coverage = "^5.3"
backtrader = {git="git@gitlab.com:rdsc_riley/backtrader.git"}
pre-commit = "^2.9.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
